--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/papaparse": "^5.3.16",
     "@types/react": "^19",
@@ -44,6 +46,7 @@
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.0",
     "jest": "^30.0.2",
+    "jest-environment-jsdom": "^30.0.2",
     "prettier": "^3.5.3",
     "tailwindcss": "^4",
     "typescript": "^5"
