--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.518.0",
     "next": "15.3.4",
     "papaparse": "^5.5.3",
     "react": "^19.0.0",
