--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,25 @@
   "version": 2,
   "framework": "nextjs",
   "buildCommand": "npm run build",
-  "outputDirectory": ".next",
+  "devCommand": "npm run dev",
   "installCommand": "npm install",
+  "outputDirectory": ".next",
+  "regions": ["sin1", "hnd1", "sfo1"],
   "functions": {
-    "src/app/api/**/*.ts": {
-      "runtime": "nodejs20.x"
+    "app/api/**/*.ts": {
+      "maxDuration": 300
+    }
+  },
+  "env": {
+    "NODE_ENV": "production",
+    "NEXT_PUBLIC_APP_URL": "@app_url",
+    "DEEPSEEK_API_KEY": "@deepseek_api_key",
+    "DEEPSEEK_API_BASE_URL": "@deepseek_api_base_url",
+    "NEXT_PUBLIC_ANALYTICS_ID": "@analytics_id"
+  },
+  "build": {
+    "env": {
+      "NODE_ENV": "production"
     }
   },
   "headers": [
@@ -24,9 +38,54 @@
         },
         {
           "key": "Access-Control-Allow-Headers",
-          "value": "X-Requested-With, Content-Type, Authorization"
+          "value": "Content-Type, Authorization"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "s-maxage=60, stale-while-revalidate"
         }
       ]
+    },
+    {
+      "source": "/(.*\\.(css|js|ico|png|jpg|jpeg|gif|svg|webp|woff|woff2))",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    }
+  ],
+  "redirects": [
+    {
+      "source": "/docs",
+      "destination": "/api-docs",
+      "permanent": false
+    },
+    {
+      "source": "/health",
+      "destination": "/api/health",
+      "permanent": false
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/sitemap.xml",
+      "destination": "/api/sitemap"
+    },
+    {
+      "source": "/robots.txt",
+      "destination": "/api/robots"
+    }
+  ],
+  "crons": [
+    {
+      "path": "/api/cron/cleanup",
+      "schedule": "0 2 * * *"
+    },
+    {
+      "path": "/api/cron/cache-warmup",
+      "schedule": "0 */6 * * *"
     }
   ]
 } 
